src/OpenCV5Sharp.Native/opencv5sharp_native.h

extern "C" __declspec(dllexport) void FastFeatureDetector_setNonmaxSuppression_0(void* self, bool f);
extern "C" __declspec(dllexport) bool FastFeatureDetector_getNonmaxSuppression_0(void* self);
extern "C" __declspec(dllexport) void FastFeatureDetector_setType_0(void* self, void* type);
extern "C" __declspec(dllexport) void* FastFeatureDetector_getType_0(void* self);
extern "C" __declspec(dllexport) const char* FastFeatureDetector_getDefaultName_0(void* self);
extern "C" __declspec(dllexport) void Feature2D_Delete(void* self);
extern "C" __declspec(dllexport) void Feature2D_detect_0(void* self, void* image, void* keypoints, void* mask);
extern "C" __declspec(dllexport) void Feature2D_detect_1(void* self, void* images, void* keypoints, void* masks);
extern "C" __declspec(dllexport) void Feature2D_compute_0(void* self, void* image, void* keypoints, void* descriptors);
extern "C" __declspec(dllexport) void Feature2D_compute_1(void* self, void* images, void* keypoints, void* descriptors);
extern "C" __declspec(dllexport) void Feature2D_detectAndCompute_0(void* self, void* image, void* mask, void* keypoints, void* descriptors, bool useProvidedKeypoints);
extern "C" __declspec(dllexport) int Feature2D_descriptorSize_0(void* self);
extern "C" __declspec(dllexport) int Feature2D_descriptorType_0(void* self);
extern "C" __declspec(dllexport) int Feature2D_defaultNorm_0(void* self);
extern "C" __declspec(dllexport) void Feature2D_write_0(void* self, const char* fileName);
extern "C" __declspec(dllexport) void Feature2D_read_0(void* self, const char* fileName);
extern "C" __declspec(dllexport) void Feature2D_read_1(void* self, void* arg1);
extern "C" __declspec(dllexport) bool Feature2D_empty_0(void* self);
extern "C" __declspec(dllexport) const char* Feature2D_getDefaultName_0(void* self);
extern "C" __declspec(dllexport) void Feature2D_write_1(void* self, void* fs, const char* name);
extern "C" __declspec(dllexport) void GFTTDetector_Delete(void* self);
extern "C" __declspec(dllexport) void* GFTTDetector_create_0(int maxCorners, double qualityLevel, double minDistance, int blockSize, bool useHarrisDetector, double k);
extern "C" __declspec(dllexport) void* GFTTDetector_create_1(int maxCorners, double qualityLevel, double minDistance, int blockSize, int gradientSize, bool useHarrisDetector, double k);
extern "C" __declspec(dllexport) void GFTTDetector_setMaxFeatures_0(void* self, int maxFeatures);
extern "C" __declspec(dllexport) int GFTTDetector_getMaxFeatures_0(void* self);
extern "C" __declspec(dllexport) void GFTTDetector_setQualityLevel_0(void* self, double qlevel);
extern "C" __declspec(dllexport) double GFTTDetector_getQualityLevel_0(void* self);
extern "C" __declspec(dllexport) void GFTTDetector_setMinDistance_0(void* self, double minDistance);
extern "C" __declspec(dllexport) double GFTTDetector_getMinDistance_0(void* self);
extern "C" __declspec(dllexport) void GFTTDetector_setBlockSize_0(void* self, int blockSize);
extern "C" __declspec(dllexport) int GFTTDetector_getBlockSize_0(void* self);
extern "C" __declspec(dllexport) void GFTTDetector_setGradientSize_0(void* self, int gradientSize_);
extern "C" __declspec(dllexport) int GFTTDetector_getGradientSize_0(void* self);
extern "C" __declspec(dllexport) void GFTTDetector_setHarrisDetector_0(void* self, bool val);
extern "C" __declspec(dllexport) bool GFTTDetector_getHarrisDetector_0(void* self);
extern "C" __declspec(dllexport) void GFTTDetector_setK_0(void* self, double k);
extern "C" __declspec(dllexport) double GFTTDetector_getK_0(void* self);
extern "C" __declspec(dllexport) const char* GFTTDetector_getDefaultName_0(void* self);
extern "C" __declspec(dllexport) void LightGlueMatcher_Delete(void* self);
extern "C" __declspec(dllexport) void* LightGlueMatcher_create_0(const char* modelPath, float scoreThreshold, int backend, int target);
extern "C" __declspec(dllexport) void LightGlueMatcher_setPairInfo_0(void* self, void* queryKpts, void* trainKpts, cv::Size queryImageSize, cv::Size trainImageSize);
extern "C" __declspec(dllexport) void LightGlueMatcher_clearPairInfo_0(void* self);
extern "C" __declspec(dllexport) void MSER_Delete(void* self);
extern "C" __declspec(dllexport) void* MSER_create_0(int delta, int min_area, int max_area, double max_variation, double min_diversity, int max_evolution, double area_threshold, double min_margin, int edge_blur_size);
extern "C" __declspec(dllexport) void MSER_detectRegions_0(void* self, void* image, void* msers, void* bboxes);
extern "C" __declspec(dllexport) void MSER_setDelta_0(void* self, int delta);
extern "C" __declspec(dllexport) int MSER_getDelta_0(void* self);
extern "C" __declspec(dllexport) void MSER_setMinArea_0(void* self, int minArea);
extern "C" __declspec(dllexport) int MSER_getMinArea_0(void* self);
extern "C" __declspec(dllexport) void MSER_setMaxArea_0(void* self, int maxArea);
extern "C" __declspec(dllexport) int MSER_getMaxArea_0(void* self);
extern "C" __declspec(dllexport) void MSER_setMaxVariation_0(void* self, double maxVariation);
extern "C" __declspec(dllexport) double MSER_getMaxVariation_0(void* self);
extern "C" __declspec(dllexport) void MSER_setMinDiversity_0(void* self, double minDiversity);
extern "C" __declspec(dllexport) double MSER_getMinDiversity_0(void* self);
extern "C" __declspec(dllexport) void MSER_setMaxEvolution_0(void* self, int maxEvolution);
extern "C" __declspec(dllexport) int MSER_getMaxEvolution_0(void* self);
extern "C" __declspec(dllexport) void MSER_setAreaThreshold_0(void* self, double areaThreshold);
extern "C" __declspec(dllexport) double MSER_getAreaThreshold_0(void* self);
extern "C" __declspec(dllexport) void MSER_setMinMargin_0(void* self, double min_margin);
extern "C" __declspec(dllexport) double MSER_getMinMargin_0(void* self);