src/OpenCV5Sharp/Generated/NativeMethods.Features.cs

        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void FastFeatureDetector_setNonmaxSuppression_0(FastFeatureDetectorHandle self, [MarshalAs(UnmanagedType.U1)] bool f);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool FastFeatureDetector_getNonmaxSuppression_0(FastFeatureDetectorHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void FastFeatureDetector_setType_0(FastFeatureDetectorHandle self, int type);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int FastFeatureDetector_getType_0(FastFeatureDetectorHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr FastFeatureDetector_getDefaultName_0(FastFeatureDetectorHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Feature2D_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Feature2D_detect_0(Feature2DHandle self, MatHandle image, IntPtr keypoints, IntPtr mask);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Feature2D_detect_1(Feature2DHandle self, IntPtr images, IntPtr keypoints, IntPtr masks);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Feature2D_compute_0(Feature2DHandle self, MatHandle image, IntPtr keypoints, MatHandle descriptors);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Feature2D_compute_1(Feature2DHandle self, IntPtr images, IntPtr keypoints, IntPtr descriptors);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Feature2D_detectAndCompute_0(Feature2DHandle self, MatHandle image, MatHandle mask, IntPtr keypoints, MatHandle descriptors, [MarshalAs(UnmanagedType.U1)] bool useProvidedKeypoints);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int Feature2D_descriptorSize_0(Feature2DHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int Feature2D_descriptorType_0(Feature2DHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int Feature2D_defaultNorm_0(Feature2DHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Feature2D_write_0(Feature2DHandle self, [MarshalAs(UnmanagedType.LPUTF8Str)] string? fileName);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Feature2D_read_0(Feature2DHandle self, [MarshalAs(UnmanagedType.LPUTF8Str)] string? fileName);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Feature2D_read_1(Feature2DHandle self, FileNodeHandle arg1);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool Feature2D_empty_0(Feature2DHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Feature2D_getDefaultName_0(Feature2DHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Feature2D_write_1(Feature2DHandle self, FileStorageHandle fs, [MarshalAs(UnmanagedType.LPUTF8Str)] string? name);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void GFTTDetector_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr GFTTDetector_create_0(int maxCorners, double qualityLevel, double minDistance, int blockSize, [MarshalAs(UnmanagedType.U1)] bool useHarrisDetector, double k);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr GFTTDetector_create_1(int maxCorners, double qualityLevel, double minDistance, int blockSize, int gradientSize, [MarshalAs(UnmanagedType.U1)] bool useHarrisDetector, double k);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void GFTTDetector_setMaxFeatures_0(GFTTDetectorHandle self, int maxFeatures);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int GFTTDetector_getMaxFeatures_0(GFTTDetectorHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void GFTTDetector_setQualityLevel_0(GFTTDetectorHandle self, double qlevel);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double GFTTDetector_getQualityLevel_0(GFTTDetectorHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void GFTTDetector_setMinDistance_0(GFTTDetectorHandle self, double minDistance);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double GFTTDetector_getMinDistance_0(GFTTDetectorHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void GFTTDetector_setBlockSize_0(GFTTDetectorHandle self, int blockSize);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int GFTTDetector_getBlockSize_0(GFTTDetectorHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void GFTTDetector_setGradientSize_0(GFTTDetectorHandle self, int gradientSize_);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int GFTTDetector_getGradientSize_0(GFTTDetectorHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void GFTTDetector_setHarrisDetector_0(GFTTDetectorHandle self, [MarshalAs(UnmanagedType.U1)] bool val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool GFTTDetector_getHarrisDetector_0(GFTTDetectorHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void GFTTDetector_setK_0(GFTTDetectorHandle self, double k);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double GFTTDetector_getK_0(GFTTDetectorHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr GFTTDetector_getDefaultName_0(GFTTDetectorHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void LightGlueMatcher_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr LightGlueMatcher_create_0([MarshalAs(UnmanagedType.LPUTF8Str)] string? modelPath, float scoreThreshold, int backend, int target);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void LightGlueMatcher_setPairInfo_0(LightGlueMatcherHandle self, MatHandle queryKpts, MatHandle trainKpts, Size queryImageSize, Size trainImageSize);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void LightGlueMatcher_clearPairInfo_0(LightGlueMatcherHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void MSER_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr MSER_create_0(int delta, int min_area, int max_area, double max_variation, double min_diversity, int max_evolution, double area_threshold, double min_margin, int edge_blur_size);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void MSER_detectRegions_0(MserHandle self, MatHandle image, IntPtr msers, IntPtr bboxes);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void MSER_setDelta_0(MserHandle self, int delta);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int MSER_getDelta_0(MserHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void MSER_setMinArea_0(MserHandle self, int minArea);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int MSER_getMinArea_0(MserHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void MSER_setMaxArea_0(MserHandle self, int maxArea);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int MSER_getMaxArea_0(MserHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void MSER_setMaxVariation_0(MserHandle self, double maxVariation);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double MSER_getMaxVariation_0(MserHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void MSER_setMinDiversity_0(MserHandle self, double minDiversity);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double MSER_getMinDiversity_0(MserHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void MSER_setMaxEvolution_0(MserHandle self, int maxEvolution);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int MSER_getMaxEvolution_0(MserHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void MSER_setAreaThreshold_0(MserHandle self, double areaThreshold);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double MSER_getAreaThreshold_0(MserHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void MSER_setMinMargin_0(MserHandle self, double min_margin);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double MSER_getMinMargin_0(MserHandle self);
